--- a/.env.production
+++ b/.env.production
@@ -1,16 +1,22 @@
-# 只在开发模式种被载入
+# baseUrl
+# /dev-api 为本地 mock 地址，不使用 mock 的话此处换为你的开发环境接口地址，例如 http://192.168.233.233
+VITE_BASE_API = '/dev-api'
 
-# 环境
-VITE_APP_MODE = "production"
+# 开发环境启用 cdn eruda 调试工具。若不启用，将 true 修改为 false 或其他任意值即可
+VITE_ENABLE_ERUDA = true
 
-# APP名称
-VITE_APP_TITLE = "vite-react-h5-template"
+VITE_CLIENT_TYPE = "C"
 
-# 网站前缀
-VITE_BASE_URL = "/vite-react-h5-template/"
+# 线上环境平台打包路径
+VITE_PUBLIC_PATH = "/retail/"
 
-# base api
-VITE_BASE_API = "/api"
+# 是否开启调试工具 vconsole
+VITE_BUILD_VCONSOLE = false
 
-# mock api
-VITE_MOCK_API = "/mock-api"
+# 是否在打包时生成 sourcemap
+VITE_BUILD_SOURCEMAP = true
+# 是否在打包时删除 console 代码
+VITE_BUILD_DROP_CONSOLE = false
+
+# 请求人员版本
+VITE_APP_POLARDAY_VERSION = "lwf"
